# learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: learnopengl.cmake
cmake/modules/: FindASSIMP.cmake  FindGLAD.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSTB.cmake
includes/learnopengl/: camera.h  mesh.h  model.h  shader.h  shader_m.h
src/1.getting_started/: CMakeLists.txt
src/1.getting_started/1.1.hello_window/: CMakelists.txt  hello_window.cpp
src/1.getting_started/1.2.hello_window_clear/: CMakeLists.txt  hello_window_clear.cpp
src/1.getting_started/2.1.hello_triangle/: CMakeLists.txt  hello_triangle.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: CMakeLists.txt  hello_triangle_indexed.cpp
src/1.getting_started/2.3.hello_triangle_exercise1/: CMakeLists.txt  hello_triangle_exercise1.cpp
src/1.getting_started/2.4.hello_triangle_exercise2/: CMakeLists.txt  hello_triangle_exercise2.cpp
src/1.getting_started/2.5.hello_triangle_exercise3/: CMakeLists.txt  hello_triangle_exercise3.cpp
src/1.getting_started/3.1.shaders_uniform/: CMakeLists.txt  shaders_uniform.cpp
src/1.getting_started/3.2.shaders_interpolation/: CMakeLists.txt  shaders_interpolation.cpp
src/1.getting_started/3.3.shaders_class/: shaders_class.cpp
src/1.getting_started/4.1.textures/: CMakeLists.txt  textures.cpp
src/1.getting_started/4.2.textures_combined/: 4.2.texture.fs  textures_combined.cpp
src/1.getting_started/4.4.textures_exercise2/: textures_exercise2.cpp
src/1.getting_started/4.5.textures_exercise3/: textures_exercise3.cpp
src/1.getting_started/4.6.textures_exercise4/: textures_exercise4.cpp
src/1.getting_started/5.1.transformations/: transformations.cpp
src/1.getting_started/5.2.transformations_exercise2/: transformations_exercise2.cpp
src/1.getting_started/6.1.coordinate_systems/: coordinate_systems.cpp
src/1.getting_started/6.2.coordinate_systems_depth/: coordinate_systems_depth.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: coordinate_systems_multiple.cpp
src/1.getting_started/7.1.camera_circle/: camera_circle.cpp
src/1.getting_started/7.2.camera_keyboard_dt/: camera_keyboard_dt.cpp
src/1.getting_started/7.3.camera_mouse_zoom/: camera_mouse_zoom.cpp
src/1.getting_started/7.4.camera_class/: camera_class.cpp
src/2.lighting/1.colors/: colors.cpp
src/2.lighting/2.1.basic_lighting_diffuse/: 2.1.basic_lighting.fs  basic_lighting_diffuse.cpp
src/2.lighting/2.2.basic_lighting_specular/: 2.2.basic_lighting.fs  2.2.basic_lighting.vs  basic_lighting_specular.cpp
src/2.lighting/3.1.materials/: materials.cpp
src/2.lighting/3.2.materials_exercise1/: materials_exercise1.cpp
src/2.lighting/4.1.lighting_maps_diffuse_map/: 4.1.lighting_maps.fs  4.1.lighting_maps.vs  lighting_maps_diffuse.cpp
src/2.lighting/4.2.lighting_maps_specular_map/: 4.2.lighting_maps.fs  lighting_maps_specular.bk  lighting_maps_specular.cpp
src/2.lighting/4.4.lighting_maps_exercise4/: lighting_maps_exercise4.bk  lighting_maps_exercise4.cpp
src/2.lighting/5.1.light_casters_directional/: 5.1.light_cube.vs  light_casters_directional.cpp
src/2.lighting/5.2.light_casters_point/: light_casters_point.cpp
src/2.lighting/5.3.light_casters_spot/: light_casters_spot.cpp
src/2.lighting/5.4.light_casters_spot_soft/: light_casters_spot_soft.cpp
src/2.lighting/6.multiple_lights/: 6.multiple_lights.fs  6.multiple_lights.vs  multiple_lights.cpp
src/3.model_loading/1.model_loading/: model_loading.cpp
src/4.advanced_opengl/: CMakeLists.txt
src/4.advanced_opengl/1.1.depth_testing/: 1.1.depth_testing.fs  depth_testing.cpp  depth_testing.cppbk
src/4.advanced_opengl/1.2.depth_testing_view/: 1.2.depth_testing.fs
src/4.advanced_opengl/3.1.blending_discard/: CMakeLists.txt  blending_discard.cpp
src/4.advanced_opengl/3.2.blending_sort/: CMakeLists.txt  blending_sorted.cpp
src/4.advanced_opengl/5.1.framebuffers/: framebuffers.cppbkk
src/4.advanced_opengl/6.1.cubemaps_skybox/: 6.1.cubemaps.fs  6.1.cubemaps.vs  6.1.skybox.fs  6.1.skybox.vs  cubemaps_skybox.cpp
src/5.advanced_lighting/: CMakeLists.txt
src/5.advanced_lighting/3.1.1.shadow_mapping_depth/: 3.1.1.shadow_mapping_depth.fs  3.1.1.shadow_mapping_depth.vs  CMakeLists.txt  shadow_mapping_depth.cpp
src/5.advanced_lighting/3.1.2.shadow_mapping_base/: CMakeLists.txt  shadow_mapping_base.cpp
src/5.advanced_lighting/3.1.3.shadow_mapping/: 3.1.3.shadow_mapping.fs  3.1.3.shadow_mapping_depth.fs  CMakeLists.txt  shadow_mapping.cpp
src/6.pbr/: CMakeLists.txt
src/6.pbr/2.1.1.ibl_irradiance_conversion/: CMakeLists.txt  ibl_irradiance_conversion.cpp  ibl_irradiance_conversion.cppbk
src/6.pbr/2.1.2.ibl_irradiance/: CMakeLists.txt  ibl_irradiance.cpp
src/6.pbr/2.2.1.ibl_specular/: 2.2.1.brdf.fs  ibl_specular.cpp
