set(CHAPTER 1.getting_started)

add_subdirectory(1.1.hello_window)
 add_subdirectory(1.2.hello_window_clear)
# add_subdirectory(2.1.hello_triangle)
# add_subdirectory(2.2.hello_triangle_indexed)
# add_subdirectory(2.3.hello_triangle_exercise1)
# add_subdirectory(2.4.hello_triangle_exercise2)
# add_subdirectory(2.5.hello_triangle_exercise3)
# add_subdirectory(3.1.shaders_uniform)
# add_subdirectory(3.2.shaders_interpolation)
# add_subdirectory(3.3.shaders_class)
# add_subdirectory(3.4.shaders_exercise1)
# add_subdirectory(3.5.shaders_exercise2)
# add_subdirectory(3.6.shaders_exercise3)
# add_subdirectory(4.1.textures)
#add_subdirectory(4.2.textures_combined)
#add_subdirectory(4.4.textures_exercise2)
#add_subdirectory(4.5.textures_exercise3)
#add_subdirectory(4.6.textures_exercise4)
#add_subdirectory(5.1.transformations)
#add_subdirectory(5.2.transformations_exercise2)
#add_subdirectory(6.1.coordinate_systems)
#add_subdirectory(6.2.coordinate_systems_depth)
#add_subdirectory(6.3.coordinate_systems_multiple)
#add_subdirectory(7.1.camera_circle)
#add_subdirectory(7.2.camera_keyboard_dt)
#add_subdirectory(7.3.camera_mouse_zoom)
#add_subdirectory(7.4.camera_class)